homeserver/pihole/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole-deployment
  namespace: pihole
  labels:
    name: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      name: pihole
  template:
    metadata:
      labels:
        name: pihole
    spec:
      containers:
        - name: pihole
          image: pihole/pihole:latest
          ports:
            - containerPort: 53
              protocol: TCP
            - containerPort: 53
              protocol: UDP
            - containerPort: 80
          volumeMounts:
            - name: pihole-pv
              mountPath: /etc/pihole
            - name: dns-pv
              mountPath: /etc/dnsmasq.d
      volumes:
        - name: pihole-pv
          persistentVolumeClaim:
            claimName: pihole-pvc
        - name: dns-pv
          persistentVolumeClaim:
            claimName: dns-pvc
