homeserver/pihole/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: pihole
  name: pihole
spec:
  type: LoadBalancer
  selector:
    name: pihole
  ports:
    - name: dns-tcp
      port: 53
      protocol: TCP
    - name: dns-udp
      port: 53
      protocol: UDP
    - name: http
      port: 8080
      targetPort: 80
